external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/missing_match_lit.ide.exp
error[E04036]: non-exhaustive pattern
  ┌─ tests/move_2024/ide_mode/missing_match_lit.move:3:16
  │
3 │         match (0) {
  │                ^ Pattern '_0' not covered
  │
  = When '_0' is not 1

note[I15004]: IDE missing match arms
  ┌─ tests/move_2024/ide_mode/missing_match_lit.move:3:19
  │  
3 │           match (0) {
  │ ╭───────────────────^
4 │ │             1 => 0
5 │ │         }
  │ ╰─────────^ Missing arms: '_'

error[E04036]: non-exhaustive pattern
  ┌─ tests/move_2024/ide_mode/missing_match_lit.move:9:16
  │
9 │         match (0) {
  │                ^ Pattern '_' not covered

note[I15004]: IDE missing match arms
   ┌─ tests/move_2024/ide_mode/missing_match_lit.move:9:19
   │  
 9 │           match (0) {
   │ ╭───────────────────^
10 │ │         }
   │ ╰─────────^ Missing arms: '_'

